force-app/main/default/objects/MonthlyExpense__c/MonthlyExpense__c.object-meta.xml
<CustomObject>
    <label>MonthlyExpense</label>
    <nameField>
        <label>MonthlyExpense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MonthlyExpenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>