force-app/main/default/objects/MonthlyExpense__c/fields/Keeper__c.field-meta.xml
<CustomField>
    <fullName>Keeper__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Keeper</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MonthlyExpenses</relationshipLabel>
    <relationshipName>MonthlyExpenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>