force-app/main/default/objects/MonthlyExpense__c/fields/MonthDate__c.field-meta.xml
<CustomField>
    <fullName>MonthDate__c</fullName>
    <label>MonthDate</label>
    <type>Date</type>
</CustomField>