force-app/main/default/objects/MonthlyExpense__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <formula>Balance__c -  SpentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reminder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>