force-app/main/default/objects/MonthlyExpense__c/fields/SpentAmount__c.field-meta.xml
<CustomField>
    <fullName>SpentAmount__c</fullName>
    <label>SpentAmount</label>
    <summarizedField>ExpenseCard__c.Amount__c</summarizedField>
    <summaryForeignKey>ExpenseCard__c.MonthlyExpense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>